[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tilemap/Lab/tileset_Lab.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Room.gd" type="Script" id=3]

[node name="Room" type="Node2D"]
script = ExtResource( 3 )
floor_tiles = [ 1, 2, 3, 4 ]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 1, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 1, -131057, 0, 1, -131056, 0, 1, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 1, -131051, 0, 1, -131050, 0, 1, -131049, 0, 1, -131048, 0, 1, -131047, 0, 1, -131046, 0, 1, -131045, 0, 1, -131044, 0, 1, -131043, 0, 1, -131042, 0, 1, -131041, 0, 1, -131040, 0, 1, -131039, 0, 1, -131038, 0, 1, -131037, 0, 1, -131036, 0, 1, -131035, 0, 1, -131034, 0, 1, -131033, 0, 1, -131032, 0, 2, -1, 0, 65536, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 65537, -65500, 0, 65537, -65499, 0, 65537, -65498, 0, 65537, -65497, 0, 65537, -65496, 0, 65538, 65535, 0, 65536, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 3, 13, 0, 131073, 14, 0, 131073, 15, 0, 131073, 16, 0, 131073, 17, 0, 131073, 18, 0, 131073, 19, 0, 131073, 20, 0, 131073, 21, 0, 131073, 22, 0, 131073, 23, 0, 131073, 24, 0, 131073, 25, 0, 131073, 26, 0, 131073, 27, 0, 131073, 28, 0, 4, 29, 0, 65537, 30, 0, 65537, 31, 0, 65537, 32, 0, 65537, 33, 0, 65537, 34, 0, 65537, 35, 0, 65537, 36, 0, 65537, 37, 0, 65537, 38, 0, 65537, 39, 0, 65537, 40, 0, 65538, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 3, 65548, 0, 131074, 65564, 0, 131072, 65565, 0, 4, 65566, 0, 65537, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65537, 65570, 0, 65537, 65571, 0, 65537, 65572, 0, 65537, 65573, 0, 65537, 65574, 0, 65537, 65575, 0, 65537, 65576, 0, 65538, 196607, 0, 65536, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 3, 131083, 0, 131074, 131101, 0, 131072, 131102, 0, 4, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65537, 131106, 0, 65537, 131107, 0, 65537, 131108, 0, 65537, 131109, 0, 65537, 131110, 0, 65537, 131111, 0, 65537, 131112, 0, 65538, 262143, 0, 65536, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 3, 196615, 0, 131073, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131074, 196638, 0, 131072, 196639, 0, 131073, 196640, 0, 131073, 196641, 0, 131073, 196642, 0, 4, 196643, 0, 65537, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65537, 196647, 0, 65537, 196648, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 3, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131074, 262178, 0, 131072, 262179, 0, 131073, 262180, 0, 131073, 262181, 0, 4, 262182, 0, 65537, 262183, 0, 65537, 262184, 0, 65538, 393215, 0, 65536, 327680, 0, 3, 327681, 0, 131073, 327682, 0, 131074, 327717, 0, 131072, 327718, 0, 131073, 327719, 0, 4, 327720, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393255, 0, 65536, 393256, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458791, 0, 65536, 458792, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524327, 0, 65536, 524328, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589863, 0, 65536, 589864, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655399, 0, 65536, 655400, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720935, 0, 65536, 720936, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786471, 0, 65536, 786472, 0, 65538, 917503, 0, 65536, 851968, 0, 65538, 852007, 0, 65536, 852008, 0, 65538, 983039, 0, 65536, 917504, 0, 65538, 917543, 0, 65536, 917544, 0, 65538, 1048575, 0, 65536, 983040, 0, 65538, 983079, 0, 65536, 983080, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65539, 1048577, 0, 1, 1048578, 0, 1, 1048579, 0, 2, 1048612, 0, 0, 1048613, 0, 1, 1048614, 0, 1, 1048615, 0, 65540, 1048616, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65539, 1114116, 0, 1, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 1, 1114120, 0, 2, 1114145, 0, 0, 1114146, 0, 1, 1114147, 0, 1, 1114148, 0, 65540, 1114149, 0, 65537, 1114150, 0, 65537, 1114151, 0, 65537, 1114152, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65539, 1179657, 0, 1, 1179658, 0, 1, 1179659, 0, 2, 1179678, 0, 0, 1179679, 0, 1, 1179680, 0, 1, 1179681, 0, 65540, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65537, 1179685, 0, 65537, 1179686, 0, 65537, 1179687, 0, 65537, 1179688, 0, 65538, 1310719, 0, 65536, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65538, 1245214, 0, 65536, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65537, 1245220, 0, 65537, 1245221, 0, 65537, 1245222, 0, 65537, 1245223, 0, 65537, 1245224, 0, 65538, 1376255, 0, 65536, 1310720, 0, 65537, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 65539, 1310732, 0, 2, 1310749, 0, 0, 1310750, 0, 65540, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65537, 1310757, 0, 65537, 1310758, 0, 65537, 1310759, 0, 65537, 1310760, 0, 65538, 1441791, 0, 65536, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65539, 1376269, 0, 2, 1376284, 0, 0, 1376285, 0, 65540, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65537, 1376293, 0, 65537, 1376294, 0, 65537, 1376295, 0, 65537, 1376296, 0, 65538, 1507327, 0, 65536, 1441792, 0, 65537, 1441793, 0, 65537, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65537, 1441797, 0, 65537, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 0, 65537, 1441805, 0, 65539, 1441806, 0, 1, 1441807, 0, 1, 1441808, 0, 1, 1441809, 0, 1, 1441810, 0, 1, 1441811, 0, 1, 1441812, 0, 1, 1441813, 0, 1, 1441814, 0, 1, 1441815, 0, 1, 1441816, 0, 1, 1441817, 0, 1, 1441818, 0, 1, 1441819, 0, 1, 1441820, 0, 65540, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65537, 1441827, 0, 65537, 1441828, 0, 65537, 1441829, 0, 65537, 1441830, 0, 65537, 1441831, 0, 65537, 1441832, 0, 65538, 1572863, 0, 131072, 1507328, 0, 131073, 1507329, 0, 131073, 1507330, 0, 131073, 1507331, 0, 131073, 1507332, 0, 131073, 1507333, 0, 131073, 1507334, 0, 131073, 1507335, 0, 131073, 1507336, 0, 131073, 1507337, 0, 131073, 1507338, 0, 131073, 1507339, 0, 131073, 1507340, 0, 131073, 1507341, 0, 131073, 1507342, 0, 131073, 1507343, 0, 131073, 1507344, 0, 131073, 1507345, 0, 131073, 1507346, 0, 131073, 1507347, 0, 131073, 1507348, 0, 131073, 1507349, 0, 131073, 1507350, 0, 131073, 1507351, 0, 131073, 1507352, 0, 131073, 1507353, 0, 131073, 1507354, 0, 131073, 1507355, 0, 131073, 1507356, 0, 131073, 1507357, 0, 131073, 1507358, 0, 131073, 1507359, 0, 131073, 1507360, 0, 131073, 1507361, 0, 131073, 1507362, 0, 131073, 1507363, 0, 131073, 1507364, 0, 131073, 1507365, 0, 131073, 1507366, 0, 131073, 1507367, 0, 131073, 1507368, 0, 131074 )

[node name="Doors" type="Node2D" parent="."]

[node name="North" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 328, 16 )

[node name="South" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 336, 352 )

[node name="West" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 16, 168 )
rotation = 1.5708

[node name="East" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 616, 168 )
rotation = 1.5708

[connection signal="door_entered" from="Doors/North" to="." method="_on_North_door_entered"]
[connection signal="door_entered" from="Doors/South" to="." method="_on_South_door_entered"]
[connection signal="door_entered" from="Doors/West" to="." method="_on_West_door_entered"]
[connection signal="door_entered" from="Doors/East" to="." method="_on_East_door_entered"]
